SERVER-23902 non-throwing stdx::thread

Instead of aliasing std::thread for stdx::thread, we wrap std::thread in
an api compatible version which std::terminates if std::thread's
constructor throws.  Given that we don't have a good strategy for
re-trying thread creation failures, this improves our stack traces, as
we can see which part of the code failed to create a thread, rather than
getting a generic error at the top of the stack.